# RKDevelopTool-GUI

./: .gitignore  README.md  README.zh.md  THIRD_PARTY_LICENSES.md  build_nuitka.py  i18n.py  operations.py  pyproject.toml  readme.md  readme.zh.md  requirements.txt  rkdevtoolgui.py  themes.py  ui_panels.py  ui_text_updates.py  utils.py  workers.py
.github/workflows/: release.yml
docs/: LOG_SYSTEM.md
packaging/: build-rkdeveloptool.sh  launcher.sh  make-appimage.sh  nfpm.yaml  rkdeveloptool-gui.desktop
rkdeveloptool-gui/: __init__.py  i18n.py  log_widget.py  operations.py  rkdevtoolgui.py  themes.py  ui_panels.py  ui_text_updates.py  utils.py  widgets.py  workers.py
